# TF_Linux_ADA

./: CMakeLists.txt  Ciudadano.h  CiudadanoService.cpp  CiudadanoService.h  CuckooHashing.cpp  CuckooHashing.h  README.md  main.cpp  menu.cpp  menu.h  server.cpp
Backend2/: CuckooHashing.cpp  config.json  main.cpp  menu.cpp
Backend2/Generador/Data/: apellidos.csv  direccion.csv  nombres.csv
Generador/: generador_datos.py
